Revmoed Templated Individual

--- a/doc/source/algorithms/pso.ipynb
+++ b/doc/source/algorithms/pso.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +95,8 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [-2.50626029e-07 -8.03655907e-09]\n",
-      "F = [7.09243484e-07]\n"
+      "X = [-7.94956179e-09  1.07254590e-07]\n",
+      "F = [3.04194228e-07]\n"
      ]
     }
    ],
@@ -107,10 +107,11 @@
     "\n",
     "problem = Ackley()\n",
     "\n",
-    "algorithm = PSO()\n",
+    "algorithm = PSO(max_velocity_rate=0.025)\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
+    "               callback=PSOAnimation(fname=\"pso.mp4\"),\n",
     "               seed=1,\n",
     "               save_history=True,\n",
     "               verbose=False)\n",
