--- a/doc/source/algorithms/rnsga2.ipynb
+++ b/doc/source/algorithms/rnsga2.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fc1e9a842d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f8385379d90>"
       ]
      },
      "execution_count": 1,
