--- a/doc/source/decision_making/index.ipynb
+++ b/doc/source/decision_making/index.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7faf47a1c710>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fd09c1f03d0>"
       ]
      },
      "execution_count": 4,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.petal.Petal at 0x7faf47c74850>"
+       "<pymoo.visualization.petal.Petal at 0x7fd09c2d99d0>"
       ]
      },
      "execution_count": 5,
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7faf4860abd0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fd09cc84c50>"
       ]
      },
      "execution_count": 6,
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7faf48780ed0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fd09bec1990>"
       ]
      },
      "execution_count": 7,
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7faf48780850>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fd09d384050>"
       ]
      },
      "execution_count": 8,
