--- a/doc/source/getting_started.ipynb
+++ b/doc/source/getting_started.ipynb
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note**: This method is only called once per iteration for most algorithms. This allows great capabilities for parallelization. "
+    "**Note**: This method is only called once per iteration for most algorithms. This gives you all the freedom to implement your own parallelization."
    ]
   },
   {
@@ -405,6 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from pymoo.model.problem import FunctionalProblem\n",
     "\n",
     "objs = [\n",
