--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -96,12 +96,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7f9ebc16d050>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x7f9ebc173650>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7f9ebc173210>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7f9ebc173850>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7f9ebc173410>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7f9ebc173490>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7fbcd7964fd0>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x7fbcd7979e90>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fbcd7979950>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fbcd7979610>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fbcd7979090>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fbcd77b2150>],\n",
        "            dtype=object))"
       ]
      },
