--- a/doc/source/interface/termination.ipynb
+++ b/doc/source/interface/termination.ipynb
@@ -293,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "430\n"
+      "425\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7ff7aac35f90>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f8261a26690>"
       ]
      },
      "execution_count": 8,
