--- a/doc/source/misc/constraint_handling.ipynb
+++ b/doc/source/misc/constraint_handling.ipynb
@@ -423,7 +423,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The penalty-based constraint handling approach internally converts equality constraints to inequality constraints. Then, the violation of inequality and equality constraints penalize the objective value. This makes all non-constrained algorithms applicable; however, it also might create a more difficult fitness landscape to solve. "
+    "The penalty-based constraint handling approach internally converts equality constraints to inequality constraints. Then, the violation of inequality and equality constraints penalize the objective value. This makes all non-constrained algorithms applicable; however, it also might create a more difficult fitness landscape to solve. \n",
+    "\n",
+    "**NOTE**: Genetic algorithms are not made to handle equality constraints out of the box, but often need to be customized to satisfy the equality constraints directly. The approach below only works for a very simple and a very limited amount of equality constraints."
    ]
   },
   {
@@ -646,7 +648,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fcca0b12890>"
+       "<pymoo.visualization.scatter.Scatter at 0x7ff70d884a50>"
       ]
      },
      "execution_count": 11,
@@ -802,34 +804,34 @@
      "output_type": "stream",
      "text": [
       "=====================================================================================\n",
-      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |  n_nds  | delta_bounds |   delta_f   \n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |  n_nds  |     eps      |  indicator  \n",
       "=====================================================================================\n",
       "    1 |     100 |  0.00000E+00 |  0.00000E+00 |       5 |            - |            -\n",
-      "    2 |     200 |  0.00000E+00 |  0.00000E+00 |      11 |  0.382047403 |  0.096263287\n",
-      "    3 |     300 |  0.00000E+00 |  0.00000E+00 |      17 |  0.072750314 |  0.046188141\n",
-      "    4 |     400 |  0.00000E+00 |  0.00000E+00 |      26 |  0.002336572 |  0.016904647\n",
-      "    5 |     500 |  0.00000E+00 |  0.00000E+00 |      40 |  0.033700365 |  0.011954721\n",
-      "    6 |     600 |  0.00000E+00 |  0.00000E+00 |      52 |  0.074158937 |  0.013012498\n",
-      "    7 |     700 |  0.00000E+00 |  0.00000E+00 |      72 |  0.004156081 |  0.005414720\n",
-      "    8 |     800 |  0.00000E+00 |  0.00000E+00 |      93 |  0.002663388 |  0.003651793\n",
-      "    9 |     900 |  0.00000E+00 |  0.00000E+00 |     100 |  0.066694097 |  0.003943605\n",
-      "   10 |    1000 |  0.00000E+00 |  0.00000E+00 |     100 |  0.000020720 |  0.002154514\n",
-      "   11 |    1100 |  0.00000E+00 |  0.00000E+00 |     100 |  0.034574202 |  0.002045963\n",
-      "   12 |    1200 |  0.00000E+00 |  0.00000E+00 |     100 |  3.97141E-06 |  0.001283364\n",
-      "   13 |    1300 |  0.00000E+00 |  0.00000E+00 |     100 |  0.003889728 |  0.001839679\n",
-      "   14 |    1400 |  0.00000E+00 |  0.00000E+00 |     100 |  0.003870320 |  0.001734946\n",
-      "   15 |    1500 |  0.00000E+00 |  0.00000E+00 |     100 |  9.04885E-07 |  0.001569638\n",
-      "   16 |    1600 |  0.00000E+00 |  0.00000E+00 |     100 |  0.00000E+00 |  0.001456301\n",
-      "   17 |    1700 |  0.00000E+00 |  0.00000E+00 |     100 |  0.00000E+00 |  0.001513338\n",
-      "   18 |    1800 |  0.00000E+00 |  0.00000E+00 |     100 |  0.008379175 |  0.001564359\n",
-      "   19 |    1900 |  0.00000E+00 |  0.00000E+00 |     100 |  0.00000E+00 |  0.001293048\n",
-      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |     100 |  0.00000E+00 |  0.001524912\n"
+      "    2 |     200 |  0.00000E+00 |  0.00000E+00 |      11 |  0.055618092 |        ideal\n",
+      "    3 |     300 |  0.00000E+00 |  0.00000E+00 |      17 |  0.025842665 |        ideal\n",
+      "    4 |     400 |  0.00000E+00 |  0.00000E+00 |      26 |  0.016904647 |            f\n",
+      "    5 |     500 |  0.00000E+00 |  0.00000E+00 |      40 |  0.033700365 |        nadir\n",
+      "    6 |     600 |  0.00000E+00 |  0.00000E+00 |      52 |  0.074158937 |        nadir\n",
+      "    7 |     700 |  0.00000E+00 |  0.00000E+00 |      72 |  0.004156081 |        nadir\n",
+      "    8 |     800 |  0.00000E+00 |  0.00000E+00 |      93 |  0.002663388 |        nadir\n",
+      "    9 |     900 |  0.00000E+00 |  0.00000E+00 |     100 |  0.066694097 |        nadir\n",
+      "   10 |    1000 |  0.00000E+00 |  0.00000E+00 |     100 |  0.002154514 |            f\n",
+      "   11 |    1100 |  0.00000E+00 |  0.00000E+00 |     100 |  0.034574202 |        nadir\n",
+      "   12 |    1200 |  0.00000E+00 |  0.00000E+00 |     100 |  0.001283364 |            f\n",
+      "   13 |    1300 |  0.00000E+00 |  0.00000E+00 |     100 |  0.003889728 |        nadir\n",
+      "   14 |    1400 |  0.00000E+00 |  0.00000E+00 |     100 |  0.003870320 |        nadir\n",
+      "   15 |    1500 |  0.00000E+00 |  0.00000E+00 |     100 |  0.001569638 |            f\n",
+      "   16 |    1600 |  0.00000E+00 |  0.00000E+00 |     100 |  0.001456301 |            f\n",
+      "   17 |    1700 |  0.00000E+00 |  0.00000E+00 |     100 |  0.001513338 |            f\n",
+      "   18 |    1800 |  0.00000E+00 |  0.00000E+00 |     100 |  0.008379175 |        nadir\n",
+      "   19 |    1900 |  0.00000E+00 |  0.00000E+00 |     100 |  0.001293048 |            f\n",
+      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |     100 |  0.001524912 |            f\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fcca0216050>"
+       "<pymoo.visualization.scatter.Scatter at 0x7ff70d8ce6d0>"
       ]
      },
      "execution_count": 14,
@@ -917,34 +919,34 @@
      "output_type": "stream",
      "text": [
       "=====================================================================================\n",
-      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |  n_nds  | delta_bounds |   delta_f   \n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |  n_nds  |     eps      |  indicator  \n",
       "=====================================================================================\n",
       "    1 |     100 |  0.000035699 |  7.218880160 |       1 |            - |            -\n",
-      "    2 |     200 |  0.000035699 |  0.937483763 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "    3 |     300 |  0.000035699 |  0.098161741 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "    4 |     400 |  0.00000E+00 |  0.024978835 |       1 |  3.360562566 |  4.74270E+30\n",
-      "    5 |     500 |  0.00000E+00 |  0.007024606 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "    6 |     600 |  0.00000E+00 |  0.001830226 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "    7 |     700 |  0.00000E+00 |  0.000759620 |       2 |  1.000000000 |  0.707106781\n",
-      "    8 |     800 |  0.00000E+00 |  0.000303923 |       2 |  0.00000E+00 |  0.00000E+00\n",
-      "    9 |     900 |  0.00000E+00 |  0.000120410 |       2 |  0.00000E+00 |  0.00000E+00\n",
-      "   10 |    1000 |  0.00000E+00 |  0.000059157 |       2 |  0.00000E+00 |  0.00000E+00\n",
-      "   11 |    1100 |  0.00000E+00 |  0.000032714 |       2 |  0.00000E+00 |  0.00000E+00\n",
-      "   12 |    1200 |  0.00000E+00 |  0.000018232 |       1 |  1.760965925 |  5.37809E+29\n",
-      "   13 |    1300 |  0.00000E+00 |  8.48023E-06 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "   14 |    1400 |  0.00000E+00 |  2.91638E-06 |       1 |  0.057548617 |  8.08449E+28\n",
-      "   15 |    1500 |  0.00000E+00 |  2.67695E-07 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "   16 |    1600 |  0.00000E+00 |  0.00000E+00 |       1 |  0.000032865 |  3.28659E+25\n",
-      "   17 |    1700 |  0.00000E+00 |  0.00000E+00 |       1 |  0.00000E+00 |  0.00000E+00\n",
-      "   18 |    1800 |  0.00000E+00 |  0.00000E+00 |       1 |  0.012175125 |  1.72033E+28\n",
-      "   19 |    1900 |  0.00000E+00 |  0.00000E+00 |       2 |  0.00000E+00 |  0.00000E+00\n",
-      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |       1 |  0.011813688 |  1.62951E+28\n"
+      "    2 |     200 |  0.000035699 |  0.937483763 |       1 |  0.00000E+00 |            f\n",
+      "    3 |     300 |  0.000035699 |  0.098161741 |       1 |  0.00000E+00 |            f\n",
+      "    4 |     400 |  0.00000E+00 |  0.024978835 |       1 |  3.360562566 |        ideal\n",
+      "    5 |     500 |  0.00000E+00 |  0.007024606 |       1 |  0.00000E+00 |            f\n",
+      "    6 |     600 |  0.00000E+00 |  0.001830226 |       1 |  0.00000E+00 |            f\n",
+      "    7 |     700 |  0.00000E+00 |  0.000759620 |       2 |  1.000000000 |        ideal\n",
+      "    8 |     800 |  0.00000E+00 |  0.000303923 |       2 |  0.00000E+00 |            f\n",
+      "    9 |     900 |  0.00000E+00 |  0.000120410 |       2 |  0.00000E+00 |            f\n",
+      "   10 |    1000 |  0.00000E+00 |  0.000059157 |       2 |  0.00000E+00 |            f\n",
+      "   11 |    1100 |  0.00000E+00 |  0.000032714 |       2 |  0.00000E+00 |            f\n",
+      "   12 |    1200 |  0.00000E+00 |  0.000018232 |       1 |  0.380979172 |        ideal\n",
+      "   13 |    1300 |  0.00000E+00 |  8.48023E-06 |       1 |  0.00000E+00 |            f\n",
+      "   14 |    1400 |  0.00000E+00 |  2.91638E-06 |       1 |  0.057548617 |        ideal\n",
+      "   15 |    1500 |  0.00000E+00 |  2.67695E-07 |       1 |  0.00000E+00 |            f\n",
+      "   16 |    1600 |  0.00000E+00 |  0.00000E+00 |       1 |  3.28659E+25 |            f\n",
+      "   17 |    1700 |  0.00000E+00 |  0.00000E+00 |       1 |  0.00000E+00 |            f\n",
+      "   18 |    1800 |  0.00000E+00 |  0.00000E+00 |       1 |  0.012175125 |        ideal\n",
+      "   19 |    1900 |  0.00000E+00 |  0.00000E+00 |       2 |  0.00000E+00 |            f\n",
+      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |       1 |  0.011813688 |        ideal\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fcca0c5c9d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7ff70c5be650>"
       ]
      },
      "execution_count": 16,
@@ -1024,7 +1026,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
