--- a/doc/source/misc/performance_indicator.ipynb
+++ b/doc/source/misc/performance_indicator.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fef8bd7ced0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f887ce90b90>"
       ]
      },
      "execution_count": 1,
