--- a/doc/source/misc/reference_directions.ipynb
+++ b/doc/source/misc/reference_directions.ipynb
@@ -156,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f9a20a0de90>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fa8178d6910>"
       ]
      },
      "execution_count": 1,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f99e9ae9350>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fa8170dd290>"
       ]
      },
      "execution_count": 2,
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f99e9c88d50>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fa7e1f7a4d0>"
       ]
      },
      "execution_count": 3,
@@ -361,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f99ea058050>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fa7e1f14550>"
       ]
      },
      "execution_count": 5,
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7f99a97a5590>"
+       "<pymoo.visualization.pcp.PCP at 0x7fa7a1aa8850>"
       ]
      },
      "execution_count": 6,
@@ -459,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7f99aac5a650>"
+       "<pymoo.visualization.pcp.PCP at 0x7fa7a1607150>"
       ]
      },
      "execution_count": 7,
@@ -530,7 +530,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f99e9bd68d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fa814bab310>"
       ]
      },
      "execution_count": 9,
