--- a/doc/source/visualization/heatmap.ipynb
+++ b/doc/source/visualization/heatmap.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7f983a102ed0>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7faa74fc1f90>"
       ]
      },
      "execution_count": 2,
@@ -102,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7f983bd2c6d0>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7faa76464b10>"
       ]
      },
      "execution_count": 3,
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7f983bd2c7d0>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7faa77610f50>"
       ]
      },
      "execution_count": 4,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7f983a8b2f90>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7faa74fc1950>"
       ]
      },
      "execution_count": 5,
@@ -242,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7f983aa4c8d0>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7faa776dbdd0>"
       ]
      },
      "execution_count": 6,
