--- a/doc/source/visualization/radar.ipynb
+++ b/doc/source/visualization/radar.ipynb
@@ -71,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radar.Radar at 0x7fcf5bffc790>"
+       "<pymoo.visualization.radar.Radar at 0x7fe52b8e3610>"
       ]
      },
      "execution_count": 2,
@@ -120,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radar.Radar at 0x7fcf5caabb10>"
+       "<pymoo.visualization.radar.Radar at 0x7fe52c7227d0>"
       ]
      },
      "execution_count": 3,
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radar.Radar at 0x7fcf5d4f7f90>"
+       "<pymoo.visualization.radar.Radar at 0x7fe52ccaa390>"
       ]
      },
      "execution_count": 4,
