--- a/doc/source/algorithms/nsga2.ipynb
+++ b/doc/source/algorithms/nsga2.ipynb
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fab9b19fb50>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fdb36a77890>"
       ]
      },
      "execution_count": 1,
@@ -156,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fab9a811850>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fdb357bb050>"
       ]
      },
      "execution_count": 2,
