--- a/doc/source/algorithms/rnsga3.ipynb
+++ b/doc/source/algorithms/rnsga3.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f96b07151d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f867e8b3690>"
       ]
      },
      "execution_count": 1,
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f96afdfcfd0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f867ef70c10>"
       ]
      },
      "execution_count": 2,
