--- a/doc/source/customization/custom.ipynb
+++ b/doc/source/customization/custom.ipynb
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f9e829a2250>"
+       "<pymoo.visualization.scatter.Scatter at 0x7ff80d07c910>"
       ]
      },
      "execution_count": 7,
