--- a/doc/source/customization/initialization.ipynb
+++ b/doc/source/customization/initialization.ipynb
@@ -48,22 +48,22 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |     300 |  3.471768692 |  3.587430605 |  0.00000E+00\n",
-      "    2 |     400 |  3.250182194 |  3.366942490 |  0.00000E+00\n",
-      "    3 |     500 |  3.018163811 |  3.135302044 |  0.00000E+00\n",
-      "    4 |     600 |  2.966398381 |  3.068969788 |  0.00000E+00\n",
-      "    5 |     700 |  2.966398381 |  2.891308016 |  0.00000E+00\n",
-      "    6 |     800 |  2.591037835 |  2.661727088 |  0.00000E+00\n",
-      "    7 |     900 |  2.501132824 |  2.609785978 |  0.00000E+00\n",
-      "    8 |    1000 |  2.304690641 |  2.277467098 |  0.00000E+00\n",
-      "    9 |    1100 |  2.192357202 |  2.015241496 |  0.00000E+00\n",
-      "   10 |    1200 |  2.091910951 |  1.893455937 |  0.00000E+00\n"
+      "    1 |     300 |  3.443717746 |  3.762600615 |  0.00000E+00\n",
+      "    2 |     400 |  3.443717746 |  3.762600615 |  0.00000E+00\n",
+      "    3 |     500 |  3.057516701 |  3.487110743 |  0.00000E+00\n",
+      "    4 |     600 |  3.057516701 |  3.476768263 |  0.00000E+00\n",
+      "    5 |     700 |  2.808102713 |  3.523349529 |  0.00000E+00\n",
+      "    6 |     800 |  2.808102713 |  3.435702647 |  0.00000E+00\n",
+      "    7 |     900 |  2.773508196 |  3.150769607 |  0.00000E+00\n",
+      "    8 |    1000 |  2.664893558 |  3.113141731 |  0.00000E+00\n",
+      "    9 |    1100 |  2.439983478 |  2.747830079 |  0.00000E+00\n",
+      "   10 |    1200 |  2.178822629 |  2.646700739 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x7ff64fa00550>"
+       "<pymoo.model.result.Result at 0x7f9a0306ebd0>"
       ]
      },
      "execution_count": 1,
@@ -112,28 +112,28 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |       0 |  3.508830371 |  3.842622666 |  0.00000E+00\n",
-      "    2 |     100 |  3.508830371 |  3.762053267 |  0.00000E+00\n",
-      "    3 |     200 |  3.232274122 |  3.492602355 |  0.00000E+00\n",
-      "    4 |     300 |  3.224748750 |  3.276434248 |  0.00000E+00\n",
-      "    5 |     400 |  2.999424499 |  3.089373128 |  0.00000E+00\n",
-      "    6 |     500 |  2.889836744 |  2.878663281 |  0.00000E+00\n",
-      "    7 |     600 |  2.532291653 |  2.723713067 |  0.00000E+00\n",
-      "    8 |     700 |  2.250234735 |  2.782304442 |  0.00000E+00\n"
+      "    1 |       0 |  3.551348758 |  4.023384902 |  0.00000E+00\n",
+      "    2 |     100 |  3.180370036 |  3.798751508 |  0.00000E+00\n",
+      "    3 |     200 |  3.075825536 |  3.635062935 |  0.00000E+00\n",
+      "    4 |     300 |  3.075825536 |  3.286647724 |  0.00000E+00\n",
+      "    5 |     400 |  3.082726752 |  3.492707776 |  0.00000E+00\n",
+      "    6 |     500 |  2.956522256 |  3.427147112 |  0.00000E+00\n",
+      "    7 |     600 |  2.615557460 |  2.545342706 |  0.00000E+00\n",
+      "    8 |     700 |  2.503068509 |  2.488037052 |  0.00000E+00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    9 |     800 |  2.125667798 |  2.677990232 |  0.00000E+00\n",
-      "   10 |     900 |  2.125667798 |  2.510500998 |  0.00000E+00\n"
+      "    9 |     800 |  2.413203659 |  2.467725613 |  0.00000E+00\n",
+      "   10 |     900 |  2.174807207 |  2.043325832 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x7ff6514465d0>"
+       "<pymoo.model.result.Result at 0x7f9a034ce950>"
       ]
      },
      "execution_count": 2,
