--- a/doc/source/misc/checkpoint.ipynb
+++ b/doc/source/misc/checkpoint.ipynb
@@ -52,7 +52,7 @@
       "    3 |     300 |  0.439419904 |  1.872462802 |  0.155903707\n",
       "    4 |     400 |  0.406628182 |  1.691762017 |  0.171264712\n",
       "    5 |     500 |  0.346478785 |  1.554097169 |  0.232891285\n",
-      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fe4c1300b50>\n",
+      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fcf01b41f50>\n",
       "    6 |     600 |  0.260455007 |  1.253989046 |  0.265093318\n",
       "    7 |     700 |  0.222821654 |  0.717126159 |  0.347501941\n",
       "    8 |     800 |  0.203582202 |  0.391439629 |  0.375532991\n",
@@ -122,17 +122,11 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2\n",
       "3\n",
       "4\n",
       "5\n",
-      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fe4c1328950>\n",
+      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fcf01b41a10>\n",
       "6\n",
       "7\n",
       "8\n",
@@ -198,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,8 +204,9 @@
     "N = 300\n",
     "np.random.seed(1)\n",
     "X = np.random.random((N, problem.n_var))\n",
-    "F = np.random.random((N, problem.n_obj))\n",
-    "G = np.random.random((N, problem.n_constr))"
+    "\n",
+    "# here F and G is re-evaluated - in practice you want to load them from files too\n",
+    "F, G = problem.evaluate(X, return_values_of=[\"F\", \"G\"])"
    ]
   },
   {
@@ -223,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,28 +250,16 @@
       "===========================================================================\n",
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
-      "    1 |       0 |  2.081623241 |  4.477105114 |            - |            -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    2 |     100 |  0.00000E+00 |  0.348655365 | -3.92561E+00 | -1.04428E+00\n",
-      "    3 |     200 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -1.54877E+00\n",
-      "    4 |     300 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -2.39171E+00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    5 |     400 |  0.00000E+00 |  0.00000E+00 | -4.36020E+00 | -3.12053E+00\n",
-      "    6 |     500 |  0.00000E+00 |  0.00000E+00 | -5.40420E+00 | -3.65667E+00\n",
-      "    7 |     600 |  0.00000E+00 |  0.00000E+00 | -5.71004E+00 | -4.13755E+00\n",
-      "    8 |     700 |  0.00000E+00 |  0.00000E+00 | -6.04352E+00 | -4.42657E+00\n",
-      "    9 |     800 |  0.00000E+00 |  0.00000E+00 | -7.02196E+00 | -4.82568E+00\n",
-      "   10 |     900 |  0.00000E+00 |  0.00000E+00 | -7.02196E+00 | -5.25394E+00\n"
+      "    1 |       0 |  0.00000E+00 |  0.119240090 | -3.86901E+00 | -1.03797E+00\n",
+      "    2 |     100 |  0.00000E+00 |  0.00000E+00 | -3.86901E+00 | -2.31220E+00\n",
+      "    3 |     200 |  0.00000E+00 |  0.00000E+00 | -4.27665E+00 | -2.89221E+00\n",
+      "    4 |     300 |  0.00000E+00 |  0.00000E+00 | -5.00346E+00 | -3.40624E+00\n",
+      "    5 |     400 |  0.00000E+00 |  0.00000E+00 | -5.00346E+00 | -3.92666E+00\n",
+      "    6 |     500 |  0.00000E+00 |  0.00000E+00 | -5.65720E+00 | -4.35164E+00\n",
+      "    7 |     600 |  0.00000E+00 |  0.00000E+00 | -6.84665E+00 | -4.73558E+00\n",
+      "    8 |     700 |  0.00000E+00 |  0.00000E+00 | -6.84665E+00 | -5.11420E+00\n",
+      "    9 |     800 |  0.00000E+00 |  0.00000E+00 | -6.84665E+00 | -5.51104E+00\n",
+      "   10 |     900 |  0.00000E+00 |  0.00000E+00 | -6.96689E+00 | -5.83190E+00\n"
      ]
     }
    ],
@@ -311,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
