--- a/doc/source/visualization/pcp.ipynb
+++ b/doc/source/visualization/pcp.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7fd0772427d0>"
+       "<pymoo.visualization.pcp.PCP at 0x7ffb29f8a550>"
       ]
      },
      "execution_count": 2,
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7fd077870890>"
+       "<pymoo.visualization.pcp.PCP at 0x7ffb2ac8aed0>"
       ]
      },
      "execution_count": 3,
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7fd07853c910>"
+       "<pymoo.visualization.pcp.PCP at 0x7ffb2a85a750>"
       ]
      },
      "execution_count": 4,
@@ -218,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7fd07853c910>"
+       "<pymoo.visualization.pcp.PCP at 0x7ffb2a85a750>"
       ]
      },
      "execution_count": 5,
