--- a/doc/source/visualization/radviz.ipynb
+++ b/doc/source/visualization/radviz.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radviz.Radviz at 0x7ff32c20da50>"
+       "<pymoo.visualization.radviz.Radviz at 0x7f8df88e65d0>"
       ]
      },
      "execution_count": 2,
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radviz.Radviz at 0x7ff32c420850>"
+       "<pymoo.visualization.radviz.Radviz at 0x7f8df80dd190>"
       ]
      },
      "execution_count": 3,
