--- a/doc/source/algorithms/nsga3.ipynb
+++ b/doc/source/algorithms/nsga3.ipynb
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7feacda8f110>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fdf5aab0450>"
       ]
      },
      "execution_count": 1,
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7feacdb6ead0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fdf599ddb50>"
       ]
      },
      "execution_count": 2,
