--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -96,12 +96,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7fbcd7964fd0>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x7fbcd7979e90>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbcd7979950>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbcd7979610>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbcd7979090>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbcd77b2150>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7fd05c9518d0>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x7fd05c9757d0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fd05c961e90>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fd05c78ebd0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fd05c975750>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7fd05c961f90>],\n",
        "            dtype=object))"
       ]
      },
