--- a/doc/source/misc/checkpoint.ipynb
+++ b/doc/source/misc/checkpoint.ipynb
@@ -52,7 +52,7 @@
       "    3 |     300 |  0.439419904 |  1.872462802 |  0.155903707\n",
       "    4 |     400 |  0.406628182 |  1.691762017 |  0.171264712\n",
       "    5 |     500 |  0.346478785 |  1.554097169 |  0.232891285\n",
-      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fcf01b41f50>\n",
+      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fc4a3c44ed0>\n",
       "    6 |     600 |  0.260455007 |  1.253989046 |  0.265093318\n",
       "    7 |     700 |  0.222821654 |  0.717126159 |  0.347501941\n",
       "    8 |     800 |  0.203582202 |  0.391439629 |  0.375532991\n",
@@ -63,7 +63,13 @@
       "   13 |    1300 |  0.091142642 |  0.138930760 |  0.521068931\n",
       "   14 |    1400 |  0.076385894 |  0.101588370 |  0.538341984\n",
       "   15 |    1500 |  0.065724984 |  0.085599120 |  0.556340204\n",
-      "   16 |    1600 |  0.052312985 |  0.073323910 |  0.580538446\n",
+      "   16 |    1600 |  0.052312985 |  0.073323910 |  0.580538446\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "   17 |    1700 |  0.040157888 |  0.057590782 |  0.598526672\n",
       "   18 |    1800 |  0.033648449 |  0.046445845 |  0.609433690\n",
       "   19 |    1900 |  0.025987575 |  0.042402381 |  0.621694736\n",
@@ -126,7 +132,7 @@
       "3\n",
       "4\n",
       "5\n",
-      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fcf01b41a10>\n",
+      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fc4a3cd6bd0>\n",
       "6\n",
       "7\n",
       "8\n",
@@ -140,7 +146,13 @@
       "16\n",
       "17\n",
       "18\n",
-      "19\n",
+      "19\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "20\n"
      ]
     }
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +262,13 @@
       "===========================================================================\n",
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
-      "    1 |       0 |  0.00000E+00 |  0.119240090 | -3.86901E+00 | -1.03797E+00\n",
+      "    1 |       0 |  0.00000E+00 |  0.119240090 | -3.86901E+00 | -1.03797E+00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    2 |     100 |  0.00000E+00 |  0.00000E+00 | -3.86901E+00 | -2.31220E+00\n",
       "    3 |     200 |  0.00000E+00 |  0.00000E+00 | -4.27665E+00 | -2.89221E+00\n",
       "    4 |     300 |  0.00000E+00 |  0.00000E+00 | -5.00346E+00 | -3.40624E+00\n",
@@ -294,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
