--- a/doc/source/misc/constraint_handling.ipynb
+++ b/doc/source/misc/constraint_handling.ipynb
@@ -648,7 +648,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7ff70d884a50>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fc8948eedd0>"
       ]
      },
      "execution_count": 11,
@@ -831,7 +831,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7ff70d8ce6d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fc8948ee350>"
       ]
      },
      "execution_count": 14,
@@ -946,7 +946,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7ff70c5be650>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fc893dcd2d0>"
       ]
      },
      "execution_count": 16,
