--- a/doc/source/visualization/heatmap.ipynb
+++ b/doc/source/visualization/heatmap.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7faa74fc1f90>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7f81389fe050>"
       ]
      },
      "execution_count": 2,
@@ -102,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7faa76464b10>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7f813995e350>"
       ]
      },
      "execution_count": 3,
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7faa77610f50>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7f813b0efb90>"
       ]
      },
      "execution_count": 4,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7faa74fc1950>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7f813b0ef950>"
       ]
      },
      "execution_count": 5,
@@ -242,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.heatmap.Heatmap at 0x7faa776dbdd0>"
+       "<pymoo.visualization.heatmap.Heatmap at 0x7f813b082150>"
       ]
      },
      "execution_count": 6,
