--- a/doc/source/visualization/radar.ipynb
+++ b/doc/source/visualization/radar.ipynb
@@ -71,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radar.Radar at 0x7fe52b8e3610>"
+       "<pymoo.visualization.radar.Radar at 0x7f8f926fa750>"
       ]
      },
      "execution_count": 2,
@@ -120,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radar.Radar at 0x7fe52c7227d0>"
+       "<pymoo.visualization.radar.Radar at 0x7f8f94a87b90>"
       ]
      },
      "execution_count": 3,
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radar.Radar at 0x7fe52ccaa390>"
+       "<pymoo.visualization.radar.Radar at 0x7f8f954c8250>"
       ]
      },
      "execution_count": 4,
