--- a/doc/source/visualization/star.ipynb
+++ b/doc/source/visualization/star.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.star_coordinate.StarCoordinate at 0x7fc4059d7810>"
+       "<pymoo.visualization.star_coordinate.StarCoordinate at 0x7f9e09336990>"
       ]
      },
      "execution_count": 2,
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.star_coordinate.StarCoordinate at 0x7fc405ac0cd0>"
+       "<pymoo.visualization.star_coordinate.StarCoordinate at 0x7f9e076b9990>"
       ]
      },
      "execution_count": 3,
