--- a/doc/source/customization/initialization.ipynb
+++ b/doc/source/customization/initialization.ipynb
@@ -48,22 +48,22 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |     300 |  3.443717746 |  3.762600615 |  0.00000E+00\n",
-      "    2 |     400 |  3.443717746 |  3.762600615 |  0.00000E+00\n",
-      "    3 |     500 |  3.057516701 |  3.487110743 |  0.00000E+00\n",
-      "    4 |     600 |  3.057516701 |  3.476768263 |  0.00000E+00\n",
-      "    5 |     700 |  2.808102713 |  3.523349529 |  0.00000E+00\n",
-      "    6 |     800 |  2.808102713 |  3.435702647 |  0.00000E+00\n",
-      "    7 |     900 |  2.773508196 |  3.150769607 |  0.00000E+00\n",
-      "    8 |    1000 |  2.664893558 |  3.113141731 |  0.00000E+00\n",
-      "    9 |    1100 |  2.439983478 |  2.747830079 |  0.00000E+00\n",
-      "   10 |    1200 |  2.178822629 |  2.646700739 |  0.00000E+00\n"
+      "    1 |     300 |  3.557557465 |  3.560881169 |  0.00000E+00\n",
+      "    2 |     400 |  3.557557465 |  3.551066633 |  0.00000E+00\n",
+      "    3 |     500 |  3.275216088 |  3.448549183 |  0.00000E+00\n",
+      "    4 |     600 |  3.198628664 |  3.176812598 |  0.00000E+00\n",
+      "    5 |     700 |  2.841616722 |  3.303868158 |  0.00000E+00\n",
+      "    6 |     800 |  2.814190050 |  3.055198410 |  0.00000E+00\n",
+      "    7 |     900 |  2.534272391 |  2.999948132 |  0.00000E+00\n",
+      "    8 |    1000 |  2.390725227 |  2.395462074 |  0.00000E+00\n",
+      "    9 |    1100 |  2.125710695 |  2.377701247 |  0.00000E+00\n",
+      "   10 |    1200 |  2.123601951 |  2.097040176 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x7f9a0306ebd0>"
+       "<pymoo.model.result.Result at 0x7f9fd252e910>"
       ]
      },
      "execution_count": 1,
@@ -112,28 +112,28 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |       0 |  3.551348758 |  4.023384902 |  0.00000E+00\n",
-      "    2 |     100 |  3.180370036 |  3.798751508 |  0.00000E+00\n",
-      "    3 |     200 |  3.075825536 |  3.635062935 |  0.00000E+00\n",
-      "    4 |     300 |  3.075825536 |  3.286647724 |  0.00000E+00\n",
-      "    5 |     400 |  3.082726752 |  3.492707776 |  0.00000E+00\n",
-      "    6 |     500 |  2.956522256 |  3.427147112 |  0.00000E+00\n",
-      "    7 |     600 |  2.615557460 |  2.545342706 |  0.00000E+00\n",
-      "    8 |     700 |  2.503068509 |  2.488037052 |  0.00000E+00\n"
+      "    1 |       0 |  3.322862696 |  3.606142195 |  0.00000E+00\n",
+      "    2 |     100 |  3.322862696 |  3.585870314 |  0.00000E+00\n",
+      "    3 |     200 |  3.225049918 |  3.346862599 |  0.00000E+00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    9 |     800 |  2.413203659 |  2.467725613 |  0.00000E+00\n",
-      "   10 |     900 |  2.174807207 |  2.043325832 |  0.00000E+00\n"
+      "    4 |     300 |  2.664109526 |  3.342549818 |  0.00000E+00\n",
+      "    5 |     400 |  2.573127159 |  3.171875277 |  0.00000E+00\n",
+      "    6 |     500 |  2.573127159 |  3.077690887 |  0.00000E+00\n",
+      "    7 |     600 |  2.382630541 |  2.827424111 |  0.00000E+00\n",
+      "    8 |     700 |  2.229156182 |  2.743251373 |  0.00000E+00\n",
+      "    9 |     800 |  2.142758472 |  2.567058186 |  0.00000E+00\n",
+      "   10 |     900 |  2.103682698 |  2.475123347 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x7f9a034ce950>"
+       "<pymoo.model.result.Result at 0x7f9fd32b2910>"
       ]
      },
      "execution_count": 2,
