--- a/doc/source/decision_making/index.ipynb
+++ b/doc/source/decision_making/index.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fd09c1f03d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fee5fa003d0>"
       ]
      },
      "execution_count": 4,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.petal.Petal at 0x7fd09c2d99d0>"
+       "<pymoo.visualization.petal.Petal at 0x7fee5fb63310>"
       ]
      },
      "execution_count": 5,
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fd09cc84c50>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fee60677b10>"
       ]
      },
      "execution_count": 6,
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fd09bec1990>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fee60677290>"
       ]
      },
      "execution_count": 7,
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fd09d384050>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fee5faba150>"
       ]
      },
      "execution_count": 8,
