--- a/doc/source/interface/termination.ipynb
+++ b/doc/source/interface/termination.ipynb
@@ -293,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "425\n"
+      "392\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f8261a26690>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fafdf8b4dd0>"
       ]
      },
      "execution_count": 8,
