--- a/doc/source/misc/reference_directions.ipynb
+++ b/doc/source/misc/reference_directions.ipynb
@@ -156,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa8178d6910>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f90547008d0>"
       ]
      },
      "execution_count": 1,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa8170dd290>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f901e3e6c10>"
       ]
      },
      "execution_count": 2,
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa7e1f7a4d0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f901f151510>"
       ]
      },
      "execution_count": 3,
@@ -361,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa7e1f14550>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f90547363d0>"
       ]
      },
      "execution_count": 5,
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7fa7a1aa8850>"
+       "<pymoo.visualization.pcp.PCP at 0x7f8fddcdfd50>"
       ]
      },
      "execution_count": 6,
@@ -459,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.pcp.PCP at 0x7fa7a1607150>"
+       "<pymoo.visualization.pcp.PCP at 0x7f8fddd07650>"
       ]
      },
      "execution_count": 7,
@@ -530,7 +530,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa814bab310>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f901e3b0b50>"
       ]
      },
      "execution_count": 9,
