--- a/doc/source/visualization/petal.ipynb
+++ b/doc/source/visualization/petal.ipynb
@@ -67,7 +67,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.petal.Petal at 0x7f9cca2e4350>"
+       "<pymoo.visualization.petal.Petal at 0x7fd4858dc350>"
       ]
      },
      "execution_count": 2,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.petal.Petal at 0x7f9ccabaa050>"
+       "<pymoo.visualization.petal.Petal at 0x7fd486a535d0>"
       ]
      },
      "execution_count": 3,
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.petal.Petal at 0x7f9ccb5d2b50>"
+       "<pymoo.visualization.petal.Petal at 0x7fd487a52190>"
       ]
      },
      "execution_count": 4,
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.petal.Petal at 0x7f9ccb610ad0>"
+       "<pymoo.visualization.petal.Petal at 0x7fd486a8b850>"
       ]
      },
      "execution_count": 5,
