--- a/doc/source/visualization/radviz.ipynb
+++ b/doc/source/visualization/radviz.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radviz.Radviz at 0x7f8df88e65d0>"
+       "<pymoo.visualization.radviz.Radviz at 0x7fad007f1750>"
       ]
      },
      "execution_count": 2,
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.radviz.Radviz at 0x7f8df80dd190>"
+       "<pymoo.visualization.radviz.Radviz at 0x7fad00a58510>"
       ]
      },
      "execution_count": 3,
