--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -43,6 +43,7 @@
     "   \n",
     "   constrained/mw.ipynb\n",
     "   constrained/dascmop.ipynb\n",
+    "   constrained/modact.ipynb\n",
     "   \n"
    ]
   },
@@ -516,10 +517,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
