--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -96,12 +96,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7fd05c9518d0>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x7fd05c9757d0>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fd05c961e90>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fd05c78ebd0>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fd05c975750>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fd05c961f90>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7ff5e9af89e8>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x7ff5e9b1c198>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7ff5e9b35438>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7ff5e9b1cfd0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7ff5e9b1c128>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7ff5e9b1c6d8>],\n",
        "            dtype=object))"
       ]
      },
@@ -249,11 +249,12 @@
    ],
    "source": [
     "problem = get_problem(\"g01\")\n",
-    "algorithm = GA(pop_size=5, return_least_infeasible=True)\n",
+    "algorithm = GA(pop_size=5)\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
     "               ('n_gen', 5),\n",
     "               verbose=True,\n",
+    "               return_least_infeasible=True,\n",
     "               seed=1)"
    ]
   },
@@ -265,7 +266,13 @@
     {
      "data": {
       "text/plain": [
-       "(None, None, None, None)"
+       "(array([ 0.75014431,  0.93402157,  0.45981887,  0.45896477,  0.78927933,\n",
+       "         0.10322601,  0.74930314,  0.9085955 ,  0.29361415, 28.77753386,\n",
+       "        13.00285721,  1.93669579,  0.78207866]),\n",
+       " array([-43.6144102]),\n",
+       " array([35.14872283, 23.13415601,  7.72723386, 22.77637934,  5.53068468,\n",
+       "        -1.74185514, 27.070325  , 12.04710206, -0.17410937]),\n",
+       " array([133.43460378]))"
       ]
      },
      "execution_count": 8,
@@ -356,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
