New Getting Started Guide (not done yet)

--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -30,28 +30,7 @@
     "   gradients.ipynb\n",
     "   parallelization.ipynb\n",
     "\n",
-    "   single/ackley.ipynb\n",
-    "   single/griewank.ipynb\n",
-    "   single/zakharov.ipynb\n",
-    "   single/rastrigin.ipynb\n",
-    "   single/rosenbrock.ipynb\n",
-    "   \n",
-    "   multi/bnh.ipynb\n",
-    "   multi/zdt.ipynb\n",
-    "   multi/osy.ipynb\n",
-    "   multi/tnk.ipynb\n",
-    "   multi/truss2d.ipynb\n",
-    "   multi/welded_beam.ipynb\n",
-    "   multi/omni_test.ipynb\n",
-    "   multi/sym_part.ipynb\n",
-    "   \n",
-    "   many/dtlz.ipynb\n",
-    "   many/wfg.ipynb\n",
-    "   \n",
-    "   constrained/mw.ipynb\n",
-    "   constrained/dascmop.ipynb\n",
-    "   constrained/modact.ipynb\n",
-    "   \n"
+    "\n"
    ]
   },
   {
@@ -138,6 +117,46 @@
    },
    "source": [
     ".. _nb_test_problems:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Problems\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    ".. toctree::\n",
+    "   :hidden:\n",
+    "   :maxdepth: 1\n",
+    "\n",
+    "   single/ackley.ipynb\n",
+    "   single/griewank.ipynb\n",
+    "   single/zakharov.ipynb\n",
+    "   single/rastrigin.ipynb\n",
+    "   single/rosenbrock.ipynb\n",
+    "   \n",
+    "   multi/bnh.ipynb\n",
+    "   multi/zdt.ipynb\n",
+    "   multi/osy.ipynb\n",
+    "   multi/tnk.ipynb\n",
+    "   multi/truss2d.ipynb\n",
+    "   multi/welded_beam.ipynb\n",
+    "   multi/omni_test.ipynb\n",
+    "   multi/sym_part.ipynb\n",
+    "   \n",
+    "   many/dtlz.ipynb\n",
+    "   many/wfg.ipynb\n",
+    "   \n",
+    "   constrained/mw.ipynb\n",
+    "   constrained/dascmop.ipynb\n",
+    "   constrained/modact.ipynb\n",
+    "   \n",
+    "\n"
    ]
   },
   {
